Fixed spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,13 @@
 
 * {
   font-family: 'Outfit', sans-serif;
-  /* margin: 0; */
-  /* padding: 0; */
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
